--- a/index.html
+++ b/index.html
@@ -144,28 +144,28 @@
                       class="social-link"
                       target="_blank"
                     >
-                      <svg class="inst" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-inst"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://twitter.com" class="social-link">
-                      <svg class="twi" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-twi"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.facebook.com" class="social-link">
-                      <svg class="fb" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-fac"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.linkedin.com" class="social-link">
-                      <svg class="ln" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-link"></use>
                       </svg>
                     </a>
@@ -191,28 +191,28 @@
                       class="social-link"
                       target="_blank"
                     >
-                      <svg class="inst" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-inst"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://twitter.com" class="social-link">
-                      <svg class="twi" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-twi"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.facebook.com" class="social-link">
-                      <svg class="fb" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-fac"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.linkedin.com" class="social-link">
-                      <svg class="ln" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-link"></use>
                       </svg>
                     </a>
@@ -238,28 +238,28 @@
                       class="social-link"
                       target="_blank"
                     >
-                      <svg class="inst" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-inst"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://twitter.com" class="social-link">
-                      <svg class="twi" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-twi"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.facebook.com" class="social-link">
-                      <svg class="fb" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-fac"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.linkedin.com" class="social-link">
-                      <svg class="ln" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-link"></use>
                       </svg>
                     </a>
@@ -285,28 +285,28 @@
                       class="social-link"
                       target="_blank"
                     >
-                      <svg class="inst" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-inst"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://twitter.com" class="social-link">
-                      <svg class="twi" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-twi"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.facebook.com" class="social-link">
-                      <svg class="fb" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-fac"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.linkedin.com" class="social-link">
-                      <svg class="ln" width="16" height="16">
+                      <svg class="soc-icon" width="16" height="16">
                         <use href="./images/symbol-defs.svg#icon-link"></use>
                       </svg>
                     </a>
@@ -466,14 +466,14 @@
                 class="social-link link-footer"
                 target="_blank"
               >
-                <svg class="inst" width="24" height="24">
+                <svg class="soc-icon" width="24" height="24">
                   <use href="./images/symbol-defs.svg#icon-inst"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="https://twitter.com" class="social-link link-footer">
-                <svg class="twi" width="24" height="24">
+                <svg class="soc-icon" width="24" height="24">
                   <use href="./images/symbol-defs.svg#icon-twi"></use>
                 </svg>
               </a>
@@ -483,7 +483,7 @@
                 href="https://www.facebook.com"
                 class="social-link link-footer"
               >
-                <svg class="fb" width="24" height="24">
+                <svg class="soc-icon" width="24" height="24">
                   <use href="./images/symbol-defs.svg#icon-fac"></use>
                 </svg>
               </a>
@@ -493,7 +493,7 @@
                 href="https://www.linkedin.com"
                 class="social-link link-footer"
               >
-                <svg class="ln" width="24" height="24">
+                <svg class="soc-icon" width="24" height="24">
                   <use href="./images/symbol-defs.svg#icon-link"></use>
                 </svg>
               </a>
