--- a/index.html
+++ b/index.html
@@ -145,28 +145,28 @@
                       target="_blank"
                     >
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-inst"></use>
+                        <use href="./images/icons.svg#icon-inst"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://twitter.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twi"></use>
+                        <use href="./images/icons.svg#icon-twi"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.facebook.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-fac"></use>
+                        <use href="./images/icons.svg#icon-fac"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.linkedin.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-link"></use>
+                        <use href="./images/icons.svg#icon-link"></use>
                       </svg>
                     </a>
                   </li>
@@ -192,28 +192,28 @@
                       target="_blank"
                     >
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-inst"></use>
+                        <use href="./images/icons.svg#icon-inst"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://twitter.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twi"></use>
+                        <use href="./images/icons.svg#icon-twi"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.facebook.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-fac"></use>
+                        <use href="./images/icons.svg#icon-fac"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.linkedin.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-link"></use>
+                        <use href="./images/icons.svg#icon-link"></use>
                       </svg>
                     </a>
                   </li>
@@ -239,28 +239,28 @@
                       target="_blank"
                     >
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-inst"></use>
+                        <use href="./images/icons.svg#icon-inst"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://twitter.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twi"></use>
+                        <use href="./images/icons.svg#icon-twi"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.facebook.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-fac"></use>
+                        <use href="./images/icons.svg#icon-fac"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.linkedin.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-link"></use>
+                        <use href="./images/icons.svg#icon-link"></use>
                       </svg>
                     </a>
                   </li>
@@ -286,28 +286,28 @@
                       target="_blank"
                     >
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-inst"></use>
+                        <use href="./images/icons.svg#icon-inst"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://twitter.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twi"></use>
+                        <use href="./images/icons.svg#icon-twi"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.facebook.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-fac"></use>
+                        <use href="./images/icons.svg#icon-fac"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a href="https://www.linkedin.com" class="social-link">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-link"></use>
+                        <use href="./images/icons.svg#icon-link"></use>
                       </svg>
                     </a>
                   </li>
@@ -467,14 +467,14 @@
                 target="_blank"
               >
                 <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-inst"></use>
+                  <use href="./images/icons.svg#icon-inst"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a href="https://twitter.com" class="social-link link-footer">
                 <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-twi"></use>
+                  <use href="./images/icons.svg#icon-twi"></use>
                 </svg>
               </a>
             </li>
@@ -484,7 +484,7 @@
                 class="social-link link-footer"
               >
                 <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-fac"></use>
+                  <use href="./images/icons.svg#icon-fac"></use>
                 </svg>
               </a>
             </li>
@@ -494,7 +494,7 @@
                 class="social-link link-footer"
               >
                 <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-link"></use>
+                  <use href="./images/icons.svg#icon-link"></use>
                 </svg>
               </a>
             </li>
