--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li class="section-second-item">
               <div class="icon">
                 <svg class="antenna" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="second-subtitle">Strategy</h3>
@@ -85,7 +85,7 @@
             <li class="section-second-item">
               <div class="icon">
                 <svg class="clock" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="second-subtitle">Punctuality</h3>
@@ -97,7 +97,7 @@
             <li class="section-second-item">
               <div class="icon">
                 <svg class="diagram" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="second-subtitle">Diligence</h3>
@@ -109,7 +109,7 @@
             <li class="section-second-item">
               <div class="icon">
                 <svg class="astronaut" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="second-subtitle">Technologies</h3>
